[package]
name = "typenum_loops"
version = "0.1.0"
authors = ["J. Millard <millard.jn@gmail.com>"]
repository = "https://github.com/millardjn/typenum_loops"
keywords = ["typenum", "Compile Time Loops", "Loops", "Unroll", "Unrolling"]
license = "MIT"

[dependencies]
typenum = "1.5"

[lib]
name = "typenum_loops"