[package]
name = "typenum_loops"
description = "A library that provides loops which are fully or partially unrolled at compile time."
version = "0.3.0"
authors = ["J. Millard <millard.jn@gmail.com>"]
repository = "https://github.com/millardjn/typenum_loops"
keywords = ["typenum", "Compile", "Time", "Loops", "Unroll"]
license = "MIT"

[dependencies]
typenum = "1.9"

[lib]
name = "typenum_loops"